chore: show bug when importing html template in js module

--- a/packages/examples/html/package.json
+++ b/packages/examples/html/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "demo": "parcel build src/index.html"
+    "demo": "parcel build src/index.html",
+    "start": "parcel src/index.html"
   },
   "browserslist": [
     "last 2 versions",
